--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "inuscript <inuscript@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^3.1.0",
-    "tape": "^4.6.2"
+    "mocha": "^3.1.0"
   },
   "dependencies": {
     "cookie": "^0.3.1",
