--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "keywords": [
     "jwt",
-    "cookie"
+    "cookie",
+    "json web token"
   ],
   "author": "inuscript <inuscript@gmail.com>",
   "license": "MIT",
