--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cookie-jwt",
   "version": "1.0.0",
-  "description": "Tiny wrapper function for got jwt payload form cookie",
+  "description": "Tiny wrapper function for get jwt payload from cookie",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
